@@ -3032,9 +3032,11 @@ Mark the frame as top-field-first.
 Mark the frame as progressive.
 @end table
 
-@section setpts
+@section asetpts, setpts
 
-Change the PTS (presentation timestamp) of the input video frames.
+Change the PTS (presentation timestamp) of the input frames.
+
+@code{asetpts} works on audio frames, @code{setpts} on video frames.
 
 Accept in input an expression evaluated through the eval API, which
 can contain the following constants:
@@ -3045,6 +3047,16 @@ the presentation timestamp in input
 
 @item N
 the count of the input frame, starting from 0.
+
+@item NB_CONSUMED_SAMPLES
+the number of consumed samples, not including the current frame (only
+audio)
+
+@item NB_SAMPLES
+the number of samples in the current frame (only audio)
+
+@item SAMPLE_RATE
+audio sample rate
 
 @item STARTPTS
 the PTS of the first video frame
@@ -3084,6 +3096,9 @@ setpts=N/(25*TB)
 
 # fixed rate 25 fps with some jitter
 setpts='1/(25*TB) * (N + 0.05 * sin(N*2*PI/25))'
+
+# apply an offset of 10 seconds to the input PTS
+setpts=PTS+10/TB
 @end example
 
 @section settb, asettb
